--- a/index.html
+++ b/index.html
@@ -8,9 +8,28 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
     <title>my first website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section>
+     <div class="half-width">
     <h1>Welcome to</h1>
-    <h1>kamrul islam world !</h1>
+    <h1><span class="orange-color">kamrul islam</span> world !</h1>
+    <h4>this is my contaent</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna 
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis 
+        aute irure dolor in reprehenderit in voluptate velit esse cillum
+         dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
+         non proident, sunt in 
+        culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <a class="link-button" target="_blank" href="#">HERE ME</a>
+        </div>
+    <div class="half-width">
+        <img src="images/index.png" alt="">
+    </div>
+    </section>
 </body>
 </html>
