--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-bar">
      <div class="half-width">
     <h1>Welcome to</h1>
     <h1><span class="orange-color">kamrul islam</span> world !</h1>
@@ -30,6 +30,22 @@
     <div class="half-width">
         <img src="images/index.png" alt="">
     </div>
+    </section>
+    <section class="dream-bar">
+        <div class="half-width">
+            <img src="images/image.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Dream -big</h2>
+            <h3>Became a Webdeveloper</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna 
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis  
+            </p>
+            <a target="_blank" href="#" class="link-button">DAWONLOAD RESUME</a>
+        </div>
     </section>
 </body>
 </html>
