experience footer add

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-bar">
+    <section class="top-bar flaxible-container">
      <div class="half-width">
     <h1>Welcome to</h1>
     <h1><span class="orange-color">kamrul islam</span> world !</h1>
@@ -31,7 +31,7 @@
         <img src="images/index.png" alt="">
     </div>
     </section>
-    <section class="dream-bar">
+    <section class="dream-bar flaxible-container">
         <div class="half-width">
             <img src="images/image.png" alt="">
         </div>
@@ -47,5 +47,33 @@
             <a target="_blank" href="#" class="link-button">DAWONLOAD RESUME</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1>experience</h1>
+       <div class="flaxible-container">
+        <div id="web-pro" class="experience-item">
+            <h1>full stack developaer</h1>
+            <h3 class="orange-color">2022 present | pro develoaper</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna 
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                ullamco laboris nisi ut aliquip ex ea commodo consequat. Dui 
+            </p>
+        </div>
+        <div id="web-baby" class="experience-item">
+            <h1>baby develoaper</h1>
+           <h3 class="orange-color"> 2021-2022 learnning develoaper </h3>
+           <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna 
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+            ullamco laboris nisi ut aliquip ex ea commodo consequat. Dui
+           </p>
+        </div>
+       </div>
+    </section>
+    <footer>
+        <p>petter parker he is best actor </p>
+    </footer>
 </body>
 </html>
